--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,10 +15,10 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉小溜",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
+  "game-title": "吃掉小溜",
   "game-intro1": "从最底下的开始",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
@@ -32,8 +32,8 @@
   "rank": "排行",
   "repo": "仓库",
   "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
+  "text-level-2": "小溜觉得很赞",
+  "text-level-3": "小溜表示震惊",
   "text-level-4": "您",
   "text-level-5": "人?",
   "time-over": "倒计时多了",
@@ -43,7 +43,7 @@
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉小鹿乃-排行榜",
+  "navbar-brand": "吃掉小溜-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
